# bigger

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: clang-format.sh  clang-format.yml  macos.yml  ubuntu.yml
assets/: README.md
examples/cubes/: main.cpp
examples/matcaps/: main.cpp
examples/mesh/: main.cpp
examples/minimal/: main.cpp
include/bigger/: app.hpp  bigger.hpp  camera.hpp  material.hpp  primitive.hpp  scene-object.hpp  screen-shot-callback.hpp  utils.hpp
include/bigger/materials/: blinnphong-material.hpp  matcap-material.hpp
include/bigger/primitives/: abstract-primitive.hpp  cube-primitive.hpp  cube.hpp  dynamic-mesh-primitive.hpp  mesh-primitive.hpp  plane-primitive.hpp  sphere-primitive.hpp  sphere.hpp
models/: README.md
shaders/blinnphong/: fs_blinnphong.sc  vs_blinnphong.sc
shaders/matcap/: fs_matcap.sc  vs_matcap.sc
src/: app.cpp  bigger.cpp  camera.cpp  dynamic-mesh-primitive.cpp  mesh-primitive.cpp  utils.cpp
